# openwrt-manager

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  ubus.rs
src/components/: AddDeviceModal.tsx  LoginPrompt.tsx  Sidebar.tsx
src/pages/: DHCP.tsx  Dashboard.tsx  Firewall.tsx  Network.tsx  Routes.tsx  System.tsx  WirelessPage.tsx
src/services/: ubus.ts
