[package]
name = "openwrt-manager"
version = "0.1.2"
description = "Native OpenWrt Manager - Cross Platform"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
chrono = "0.4"
rand = "0.8"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
